--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -2,10 +2,10 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr>
-	<td>Before starting</td>Welcome and Introduction<td></td></tr>
+      <tr><td>Before starting</td> <td>Welcome and Introduction</td></tr>
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td>Morning</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
+      <tr><td>Lunch break</td><td></td></tr>
       <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R and RStudio</a></td></tr>
       <tr> <td>15:30</td> <td>END</td> </tr>
     </table>
@@ -14,14 +14,18 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Starting with data</a></td></tr>
+      <tr><td>Lunch break</td><td></td></tr>
       <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introducing dplyr and tidyr</a></td></tr>
       <tr> <td>15:30</td> <td>END</td> </tr>
     </table>
   </div>
+</div>
+<div class="row">
  <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
 	    <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Data Visualisation with ggplot2</a></td></tr>
+	    <tr><td>Lunch break</td><td></td></tr>
 	    <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Processing JSON data</a></td></tr>
 	<td>15:30</td>
 	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
