--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -27,13 +27,8 @@
 	    <tr> <td>Morning</td> <td><a href="https://datacarpentry.org/r-socialsci/">Data Visualisation with ggplot2</a></td></tr>
 	    <tr><td>Lunch break</td><td></td></tr>
 	    <tr> <td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Processing JSON data</a></td></tr>
-	<td>15:30</td>
-	<td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
-      </tr>
-      <tr>
-	<td> </td>
-	<td> END </td>
-      </tr>
+	    <tr> <td>15:30</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td></tr>
+      <tr><td> </td><td> END </td></tr>
     </table>
   </div>
 </div>
