--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -6,7 +6,7 @@
       <tr><td>Morning</td> <td> <a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a></td></tr>
       <tr><td>Morning</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
       <tr><td>Lunch break</td><td></td></tr>
-      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R and RStudio</a></td></tr>
+      <tr><td>Afternoon</td><td><a href="https://datacarpentry.org/r-socialsci/">Overview to R and RStudio</a></td></tr>
       <tr> <td>15:30</td> <td>END</td> </tr>
     </table>
   </div>
